force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Interest_Rate_Last__c.field-meta.xml
<CustomField>
    <fullName>DM_Interest_Rate_Last__c</fullName>
    <description>Last Interest Rate</description>
    <inlineHelpText>This is the last interest rate that was applied on the loan.</inlineHelpText>
    <label>DM Last Interest Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>