force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Interest_Rate_on_Due_IOA__c.field-meta.xml
<CustomField>
    <fullName>DM_Interest_Rate_on_Due_IOA__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DM Interest Rate on Due IOA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>