force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Interest_Rate_Past_Maturity__c.field-meta.xml
<CustomField>
    <fullName>DM_Interest_Rate_Past_Maturity__c</fullName>
    <description>Interest Rate Past Maturity</description>
    <inlineHelpText>Interest rate Applicable after Maturity Date.</inlineHelpText>
    <label>DM Interest Rate Past Maturity</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>