force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Interest_Remaining__c.field-meta.xml
<CustomField>
    <fullName>DM_Interest_Remaining__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Unpaid Interest, accrued till last accrual date.</description>
    <inlineHelpText>Unpaid Interest, accrued till last accrual date.</inlineHelpText>
    <label>DM Interest Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>