force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Interest_Rounding_Error__c.field-meta.xml
<CustomField>
    <fullName>DM_Interest_Rounding_Error__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field stores the interest rounding error whenever LAD changes. It will be used to adjust the rounded value of interest accrued not due.</description>
    <label>DM Interest Rounding Error</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>