force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Interest_Service_Fee__c.field-meta.xml
<CustomField>
    <fullName>DM_Interest_Service_Fee__c</fullName>
    <inlineHelpText>This is the service fee %age that will be charged to the originating bank.</inlineHelpText>
    <label>DM Interest Service Fee</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>