force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Investment_Interest_Options__c.field-meta.xml
<CustomField>
    <fullName>DM_Investment_Interest_Options__c</fullName>
    <description>This field indicates what should be the action on interest accrued on Investment products</description>
    <label>DM Investment Interest Options</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DM_Donate</fullName>
            </value>
            <value>
                <fullName>DM_Reinvest</fullName>
            </value>
            <value>
                <fullName>DM_Pay Back</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>