force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Investment_Product_loan__c.field-meta.xml
<CustomField>
    <fullName>DM_Investment_Product_loan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Investment Product loan</label>
    <type>Checkbox</type>
</CustomField>