force-app/main/default/objects/DM_Loan_Account__c/fields/DM_IOA_Generation_Status__c.field-meta.xml
<CustomField>
    <fullName>DM_IOA_Generation_Status__c</fullName>
    <description>It will determine IOA Generation state i.e. Pending, Success or Failure.</description>
    <inlineHelpText>t will determine IOA Generation state i.e. Pending, Success or Failure.</inlineHelpText>
    <label>DM IOA Generation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DM_Success</fullName>
            </value>
            <value>
                <fullName>DM_Pending</fullName>
            </value>
            <value>
                <fullName>DM_Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>