force-app/main/default/objects/DM_Loan_Account__c/fields/DM_IOA_Waived__c.field-meta.xml
<CustomField>
    <fullName>DM_IOA_Waived__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Waived interest on Arrears Amount on this account.</description>
    <inlineHelpText>Waived interest on Arrears Amount on this account.</inlineHelpText>
    <label>DM Interest On Arrears Waived</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>