force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Is_Capitalization_Enabled__c.field-meta.xml
<CustomField>
    <fullName>DM_Is_Capitalization_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Is Capitalization Enabled</label>
    <type>Checkbox</type>
</CustomField>