force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Is_Interest_Posting_Enabled__c.field-meta.xml
<CustomField>
    <fullName>DM_Is_Interest_Posting_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Is Interest Posting</label>
    <type>Checkbox</type>
</CustomField>