force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Is_Rescheduled__c.field-meta.xml
<CustomField>
    <fullName>DM_Is_Rescheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This flag will be checked once the lending account is rescheduled.
This should not be manually checked/unchecked by the user.</inlineHelpText>
    <label>DM Rescheduled</label>
    <type>Checkbox</type>
</CustomField>