force-app/main/default/objects/DM_Loan_Account__c/fields/DM_LA_Amortization_Calculation_Method__c.field-meta.xml
<CustomField>
    <fullName>DM_LA_Amortization_Calculation_Method__c</fullName>
    <label>DM Amortization Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DM_Interest Bearing</fullName>
                <default>true</default>
                <label>DM_Interest Bearing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>