force-app/main/default/objects/DM_Loan_Account__c/fields/DM_LA_Amortization_Enabled__c.field-meta.xml
<CustomField>
    <fullName>DM_LA_Amortization_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>DM Enabled</label>
    <type>Checkbox</type>
</CustomField>