force-app/main/default/objects/DM_Loan_Account__c/fields/DM_LA_Amortization_Frequency__c.field-meta.xml
<CustomField>
    <fullName>DM_LA_Amortization_Frequency__c</fullName>
    <label>DM Amortization Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DM_Monthly</fullName>
                <default>true</default>
                <label>DM_Monthly</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>