force-app/main/default/objects/DM_Loan_Account__c/fields/DM_LA_Amortized_Balance_Type__c.field-meta.xml
<CustomField>
    <fullName>DM_LA_Amortized_Balance_Type__c</fullName>
    <label>DM Amortize Balance Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DM_Interest</fullName>
                <default>true</default>
                <label>DM_Interest</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>