force-app/main/default/objects/DM_Loan_Account__c/fields/DM_la_delinquency_flag__c.field-meta.xml
<CustomField>
    <fullName>DM_la_delinquency_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This flag will get checked as soon as the contract becomes delinquent, where user is not able to make the payments based on the contract.
This will be checked/unchecked by the system and should not be modified by user.</inlineHelpText>
    <label>DM Delinquent</label>
    <type>Checkbox</type>
</CustomField>