force-app/main/default/objects/DM_Loan_Account__c/fields/DM_la_matured_flag__c.field-meta.xml
<CustomField>
    <fullName>DM_la_matured_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This flag will be checked if the lending account has crossed it&#39;s maturity date and there is outstanding balance on this contract.</inlineHelpText>
    <label>DM Matured</label>
    <type>Checkbox</type>
</CustomField>