force-app/main/default/objects/DM_Loan_Account__c/fields/DM_la_next_amortization_date__c.field-meta.xml
<CustomField>
    <fullName>DM_la_next_amortization_date__c</fullName>
    <label>DM Next Amortization Date</label>
    <type>Date</type>
</CustomField>