force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Last_Accrual_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Last_Accrual_Date__c</fullName>
    <description>Last accrual Date on loan account</description>
    <inlineHelpText>The date on which Interest was computed and posted on the Account.</inlineHelpText>
    <label>DM Last Accrual Date</label>
    <type>Date</type>
</CustomField>