force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Last_Advance_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Last_Advance_Date__c</fullName>
    <description>Date when last Advance was made.</description>
    <inlineHelpText>Date when the  Advance was made.</inlineHelpText>
    <label>DM Last Advance Date</label>
    <type>Date</type>
</CustomField>