force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Last_Bank_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Last_Bank_Transaction_Date__c</fullName>
    <label>DM Last Bank Transaction Date</label>
    <type>Date</type>
</CustomField>