force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Last_Disbursal_Amount__c.field-meta.xml
<CustomField>
    <fullName>DM_Last_Disbursal_Amount__c</fullName>
    <inlineHelpText>Last Disbursal Transaction Amount</inlineHelpText>
    <label>DM Last Disbursal Transaction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>