force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Last_Disbursal_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Last_Disbursal_Date__c</fullName>
    <description>Last Disbursal Transaction Date</description>
    <inlineHelpText>Last Disbursal Transaction Date</inlineHelpText>
    <label>DM Last Disbursal Transaction Date</label>
    <type>Date</type>
</CustomField>