force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Last_Interest_Posting_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Last_Interest_Posting_Date__c</fullName>
    <label>DM Last Interest Posting Date</label>
    <type>Date</type>
</CustomField>