force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Last_Investment_Loan_Payment_Changed__c.field-meta.xml
<CustomField>
    <fullName>DM_Last_Investment_Loan_Payment_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate whether the last payment of investment loan is changed anytime in the lifetime of the loan by user.</description>
    <label>DM Last Investment Loan Payment Changed</label>
    <type>Checkbox</type>
</CustomField>