force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Last_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Last_Payment_Date__c</fullName>
    <description>Date when last payment was received.</description>
    <inlineHelpText>Date when the  last payment was received.</inlineHelpText>
    <label>DM Last Payment Date</label>
    <type>Date</type>
</CustomField>