force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Last_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>DM_Last_Transaction_Id__c</fullName>
    <label>DM Last Transaction Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>