force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Last_Transaction_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>DM_Last_Transaction_Timestamp__c</fullName>
    <inlineHelpText>This shows the date and time stamp of last transaction happened on this contract.
This will be populated by system and must not be changed by user.</inlineHelpText>
    <label>DM Last Transaction Timestamp</label>
    <type>DateTime</type>
</CustomField>