force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Last_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>DM_Last_Transaction_Type__c</fullName>
    <inlineHelpText>This shows the last transaction happened on this contract.
This will be populated by system and must not be changed by user.</inlineHelpText>
    <label>DM Last Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DM_Reschedule</fullName>
            </value>
            <value>
                <fullName>DM_Extension</fullName>
            </value>
            <value>
                <fullName>DM_PrincipalAdjustment-Add</fullName>
            </value>
            <value>
                <fullName>DM_Refund</fullName>
            </value>
            <value>
                <fullName>DM_Additional Repayment</fullName>
            </value>
            <value>
                <fullName>DM_Stop Accrual</fullName>
            </value>
            <value>
                <fullName>DM_Start Accrual</fullName>
            </value>
            <value>
                <fullName>DM_Payment Transaction</fullName>
            </value>
            <value>
                <fullName>DM_Disbursal Transaction</fullName>
            </value>
            <value>
                <fullName>DM_Payment Reversal</fullName>
            </value>
            <value>
                <fullName>DM_Disbursal Reversal</fullName>
            </value>
            <value>
                <fullName>DM_Credit Limit Change</fullName>
            </value>
            <value>
                <fullName>DM_Index Rate Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>