force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Loan_Account_External_Id__c.field-meta.xml
<CustomField>
    <fullName>DM_Loan_Account_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>DM Loan Account External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>