force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>DM_Loan_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Loan Amount</description>
    <inlineHelpText>This is the financed amount on the contract which will be disbursed to the customer.</inlineHelpText>
    <label>DM Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>