force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Loan_Balance__c.field-meta.xml
<CustomField>
    <fullName>DM_Loan_Balance__c</fullName>
    <label>DM Loan Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>