force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Loan_Cycle_Count__c.field-meta.xml
<CustomField>
    <fullName>DM_Loan_Cycle_Count__c</fullName>
    <label>DM Loan Cycle Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>