force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Loan_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Loan_Effective_Date__c</fullName>
    <description>Effective Date of Loan account.</description>
    <label>DM Effective Date</label>
    <type>Date</type>
</CustomField>