force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Loan_Status__c.field-meta.xml
<CustomField>
    <fullName>DM_Loan_Status__c</fullName>
    <inlineHelpText>Status of the Account expected values are :
Pending Approval
Active - Good Standing
Active - Bad Standing
Active - Matured
Approved
Canceled
Closed - Obligations met
Closed- Written Off
Closed - Refinanced
Partial Application
Closed - Premature</inlineHelpText>
    <label>DM Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DM_Active - Bad Standing</fullName>
            </value>
            <value>
                <fullName>DM_Active - Good Standing</fullName>
            </value>
            <value>
                <fullName>DM_Active - Marked for Closure</fullName>
            </value>
            <value>
                <fullName>DM_Active - Matured</fullName>
            </value>
            <value>
                <fullName>DM_Approved</fullName>
            </value>
            <value>
                <fullName>DM_Canceled</fullName>
            </value>
            <value>
                <fullName>DM_Closed - Obligations met</fullName>
            </value>
            <value>
                <fullName>DM_Closed - Premature</fullName>
            </value>
            <value>
                <fullName>DM_Closed - Refinanced</fullName>
            </value>
            <value>
                <fullName>DM_Closed- Written Off</fullName>
            </value>
            <value>
                <fullName>DM_Invalid</fullName>
            </value>
            <value>
                <fullName>DM_Partial Application</fullName>
                <default>true</default>
                <label>DM_Partial Application</label>
            </value>
            <value>
                <fullName>DM_Pending Approval</fullName>
            </value>
            <value>
                <fullName>DM_Premature Closure Initiated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>