force-app/main/default/objects/DM_Loan_Account__c/fields/DM_LoanCnt__c.field-meta.xml
<CustomField>
    <fullName>DM_LoanCnt__c</fullName>
    <defaultValue>1</defaultValue>
    <label>DM LoanCnt</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>