force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Long_Term_Loan__c.field-meta.xml
<CustomField>
    <fullName>DM_Long_Term_Loan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Long Term Loan</label>
    <type>Checkbox</type>
</CustomField>