force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Margin_Rate__c.field-meta.xml
<CustomField>
    <fullName>DM_Margin_Rate__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Margin Rate for Floating Interest Rate Loan</inlineHelpText>
    <label>DM Margin Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>