force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Market_Place_Value__c.field-meta.xml
<CustomField>
    <fullName>DM_Market_Place_Value__c</fullName>
    <formula>DM_Loan_Amount__c -  DM_Protect_fee_amount__c + DM_Protect_Split_Charged_To_Investor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DM Market Place Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>