force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Maturity_Date_Current__c.field-meta.xml
<CustomField>
    <fullName>DM_Maturity_Date_Current__c</fullName>
    <inlineHelpText>This is the date on which the the loan matures</inlineHelpText>
    <label>DM Current Maturity Date</label>
    <type>Date</type>
</CustomField>