force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Maximum_Draw_Amount__c.field-meta.xml
<CustomField>
    <fullName>DM_Maximum_Draw_Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Maximum Draw amount which can be given to the customer, applicable for line of credits.</inlineHelpText>
    <label>DM Maximum Draw Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>