force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Maximum_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>DM_Maximum_Interest_Rate__c</fullName>
    <description>Maximum interest rate for the contract</description>
    <inlineHelpText>Maximum interest rate for the contract</inlineHelpText>
    <label>DM Maximum Interest Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>