force-app/main/default/objects/DM_Loan_Account__c/fields/DM_MCA_Fraction_Rate__c.field-meta.xml
<CustomField>
    <fullName>DM_MCA_Fraction_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DM MCA Fraction Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>