force-app/main/default/objects/DM_Loan_Account__c/fields/DM_MCA_Mode__c.field-meta.xml
<CustomField>
    <fullName>DM_MCA_Mode__c</fullName>
    <label>DM MCA Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DM_Revenue Transaction</fullName>
            </value>
            <value>
                <fullName>DM_Credit Card Processor</fullName>
            </value>
            <value>
                <fullName>DM_Payment Gateway</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>