force-app/main/default/objects/DM_Loan_Account__c/fields/DM_MCA_Transaction_Category__c.field-meta.xml
<CustomField>
    <fullName>DM_MCA_Transaction_Category__c</fullName>
    <label>DM MCA Transaction Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>