force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Metro2_Account_highest_bal_amount__c.field-meta.xml
<CustomField>
    <fullName>DM_Metro2_Account_highest_bal_amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Highest Outstanding Principal Balance Amount</description>
    <label>DM Highest Bal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>