force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Metro2_Account_pmt_history_date__c.field-meta.xml
<CustomField>
    <fullName>DM_Metro2_Account_pmt_history_date__c</fullName>
    <description>Date when last Metro2 file was generated.</description>
    <label>DM Last Reported Metro2 Date</label>
    <type>Date</type>
</CustomField>