force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Metro2_Account_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>DM_Metro2_Account_Status_Code__c</fullName>
    <inlineHelpText>Contains the status code that properly identifies the current condition of the account as of the Date of Account Information</inlineHelpText>
    <label>DM Account Status Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>