force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Metro2_CCCD_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Metro2_CCCD_Date__c</fullName>
    <description>Compliance Condition Code reported date</description>
    <label>DM CCCD Date</label>
    <type>Date</type>
</CustomField>