force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Metro2_CIIC_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Metro2_CIIC_Date__c</fullName>
    <description>Reported date of Consumer Information Indicator Code</description>
    <label>DM CIIC Date</label>
    <type>Date</type>
</CustomField>