force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Metro2_Compliance_Condition_Code__c.field-meta.xml
<CustomField>
    <fullName>DM_Metro2_Compliance_Condition_Code__c</fullName>
    <defaultValue>&quot;UNDEFINED&quot;</defaultValue>
    <description>Reported Metro2_Compliance_Condition_Code__c.</description>
    <label>DM Compliance Conditon Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>