force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Metro2_Consumer_Information_Code__c.field-meta.xml
<CustomField>
    <fullName>DM_Metro2_Consumer_Information_Code__c</fullName>
    <defaultValue>&quot;UNDEFINED&quot;</defaultValue>
    <description>Reported Consumer Information Code</description>
    <label>DM Consumer Information Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>