force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Metro2_Payment_History__c.field-meta.xml
<CustomField>
    <fullName>DM_Metro2_Payment_History__c</fullName>
    <inlineHelpText>Report one month&#39;s payment record in each byte from the left to right in least recent to most recent order.</inlineHelpText>
    <label>DM Payment History</label>
    <length>180</length>
    <type>Text</type>
</CustomField>