force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Metro2_Special_Comment__c.field-meta.xml
<CustomField>
    <fullName>DM_Metro2_Special_Comment__c</fullName>
    <label>DM Metro2 Special Comment</label>
    <length>4</length>
    <type>Text</type>
</CustomField>