force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Minimum_Advance_Amount__c.field-meta.xml
<CustomField>
    <fullName>DM_Minimum_Advance_Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>DM Minimum Advance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>