force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Minimum_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>DM_Minimum_Amount_Due__c</fullName>
    <inlineHelpText>Minimum % of bill amount to be paid by borrower to avoid late fee.</inlineHelpText>
    <label>DM Minimum Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>