force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Minimum_Amount_Due_Type__c.field-meta.xml
<CustomField>
    <fullName>DM_Minimum_Amount_Due_Type__c</fullName>
    <label>DM Minimum Amount Due Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DM_Percent</fullName>
            </value>
            <value>
                <fullName>DM_Fixed Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>